update to alert

--- a/tbdr/templates/upload/upload_complete.html
+++ b/tbdr/templates/upload/upload_complete.html
@@ -19,7 +19,7 @@
             You can view the status of your runs by clicking on the links below.
 
         </div>
-        <div>
+        <div class="alert alert-primary p-2" role="alert">
             Do you have NTM data? We are currently working on a NTM version of TB-Profiler.
             You can test it out <a href="https://bioinformatics.lshtm.ac.uk/ntm-profiler">here</a>! 
             This is still in development so please let us know if you have any feedback.
